--- a/formulário.html
+++ b/formulário.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem é Julyana Klapousko </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="formulário.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -19,11 +19,20 @@
     </header>
     <main class="conteudo">
         <section class="conteudo-principal">
-            <div class="conteudo-principal-escrito">
-                <h1 class="conteudo-principal-titulo">Julyana Klapousko</h1>
-                <h2 class="conteudo-principal-subtitulo">É um prazer te conhecer!</h2>
-            </div>
-            <img class="imagem-principal" src="/imagens/fotojulyk.jpg" alt="Imagem de perfil Julyana">
+                <h1 class="conteudo-principal-titulo">Fale Comigo</h1>
+                <form>
+                    <div class="formulario">
+                    <label for="nome">Nome</label>
+                    <input type="text">
+                    <label for="E-mail">E-mail</label>
+                    <input type="email">
+                    
+                    <label for="mensagem">Deixe sua mensagem</label>
+                    <textarea cols="80" rows="20"></textarea>
+                    <button>Enviar</button>
+                    </div>
+                </form>
+
         </section>
     </main>
 </body>
