--- a/index2.html
+++ b/index2.html
@@ -12,9 +12,10 @@
     <body>
         <header class="cabecalho">
             <nav class="cabecalho-menu">
-                <a class="cabecalho-menu-item" href="index.html"><strong> Quem sou eu? </strong></a>
-                <a class="cabecalho-menu-item"><strong> Hobbies </strong></a>
-                <a class="cabecalho-menu-item"><strong>Fale comigo </strong></a>
+                <a class="cabecalho-menu-item" href="index.html"><strong> Home </strong></a>
+                <a class="cabecalho-menu-item" href="index2.html"><strong> Quem sou eu? </strong></a>
+                <a class="cabecalho-menu-item" href="index3.html"><strong> Hobbies </strong></a>
+                <a class="cabecalho-menu-item" href="formulário.html"><strong>Fale comigo </strong></a>
             </nav>
         </header>
     <main class="conteudo">
