--- a/index3.html
+++ b/index3.html
@@ -10,17 +10,17 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho-menu">
+            <a class="cabecalho-menu-item" href="index.html"><strong> Home </strong></a>
             <a class="cabecalho-menu-item" href="index2.html"><strong> Quem sou eu? </strong></a>
-            <a class="cabecalho-menu-item" href="index.html"><strong> Hobbies </strong></a>
-            <a class="cabecalho-menu-item"><strong>Fale comigo </strong></a>
+            <a class="cabecalho-menu-item" href="index3.html"><strong> Hobbies </strong></a>
+            <a class="cabecalho-menu-item" href="formulário.html"><strong>Fale comigo </strong></a>
         </nav>
     </header>
     <main class="conteudo">
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
-                <h1 class="conteudo-principal-titulo">O que me leva pro céu?</h1>
-                <p class="paragrafo-descricao-hobbies"></p>
+                <h1 class="conteudo-principal-titulo">Hobbies</h1>
+                <p class="paragrafo-descricao-hobbies"> Meu hobbie envolve cantar e tocar ukulele, escrever poemas. Eu amo não fazer nada, deitar e ficar olhando o céu, sentir o calor do sol, o vento. Adoro passsar tempo com as minhas cachorras, também gosto de cozinhar. E claro, eu amoo escutar Taylor Swift, literalmente tudo pra mim.</p>
             </div>
-    
 </body>
 </html>
