tentativa de abrir a foto inicial

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h1 class="conteudo-principal-titulo">Julyana Klapousko</h1>
                 <h2 class="conteudo-principal-subtitulo">É um prazer te conhecer!</h2>
             </div>
-            <img class="imagem-principal" src="/imagens/fotojulyk.jpg" alt="Imagem de perfil Julyana">
+            <img class="imagem-principal" src="./imagens/fotojulyk.jpg" alt="Imagem de perfil Julyana">
         </section>
     </main>
 </body>
