ajuste de fotos

--- a/index2.html
+++ b/index2.html
@@ -31,10 +31,10 @@
         </section>
         <section class="fotos-das-filhas">
             <div>
-                <img class="foto-meninas" src="/imagens/lupi.jpg" alt="foto vera lúcia">
-                <img class="foto-meninas" src="/imagens/choco.jpg" alt="foto choco">
-                <img class="foto-meninas" src="/imagens/catarina.jpg" alt="foto Catarina">
-                <img class="foto-meninas" src="/imagens/mochi.jpg" alt="foto Mochi">
+                <img class="foto-meninas" src="./imagens/lupi.jpg" alt="foto vera lúcia">
+                <img class="foto-meninas" src="./imagens/choco.jpg" alt="foto choco">
+                <img class="foto-meninas" src="./imagens/catarina.jpg" alt="foto Catarina">
+                <img class="foto-meninas" src="./imagens/mochi.jpg" alt="foto Mochi">
             </div>
             </section>
     </main>
