foto das meninas

--- a/index3.html
+++ b/index3.html
@@ -20,7 +20,7 @@
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-titulo">Hobbies</h1>
-                <p class="paragrafo-descricao-hobbies"> Meu hobbie envolve cantar e tocar ukulele, escrever poemas. Eu amo não fazer nada, deitar e ficar olhando o céu, sentir o calor do sol, o vento. Adoro passsar tempo com as minhas cachorras, também gosto de cozinhar. E claro, eu amoo escutar Taylor Swift, literalmente tudo pra mim.</p>
+                <p class="paragrafo-descricao-hobbies"> <strong>Meu hobbie envolve cantar e tocar ukulele, escrever poemas. Eu amo não fazer nada, deitar e ficar olhando o céu, sentir o calor do sol, o vento. Adoro passsar tempo com as minhas cachorras, também gosto de cozinhar. E claro, eu amoo escutar Taylor Swift, literalmente tudo pra mim.</strong></p>
             </div>
 </body>
 </html>
