correções adicionado pasta CSS e renomeado arquivos

--- a/formulário.html
+++ b/formulário.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem é Julyana Klapousko </title>
-<link rel="stylesheet" type="text/css" href="formulário.css">
+<link rel="stylesheet" type="text/css" href="./CSS/formulário.css">
 </head>
 <body>
     <header class="cabecalho">
@@ -20,8 +20,8 @@
     <main class="conteudo">
         <section class="conteudo-principal">
                 <h1 class="conteudo-principal-titulo">Fale Comigo</h1>
-                <form>
-                    <div class="formulario">
+                <form class="formulario">
+                    
                     <label for="nome">Nome</label>
                     <input type="text">
                     <label for="E-mail">E-mail</label>
@@ -30,7 +30,7 @@
                     <label for="mensagem">Deixe sua mensagem</label>
                     <textarea cols="80" rows="20"></textarea>
                     <button>Enviar</button>
-                    </div>
+                    
                 </form>
 
         </section>
