--- a/index.html
+++ b/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- nome da minha página e link do css que está estilizando essa página -->
     <title>Quem é Julyana Klapousko </title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="./CSS/style.css">
 </head>
 <body>
     <header class="cabecalho">
+        <!-- Criação do menu de navegação com o link de cada pagina nomeada como pede a atividade -->
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="index.html"><strong> Home </strong></a>
-            <a class="cabecalho-menu-item" href="index2.html"><strong> Quem sou eu? </strong></a>
-            <a class="cabecalho-menu-item" href="index3.html"><strong> Hobbies </strong></a>
-            <a class="cabecalho-menu-item" href="formulário.html"><strong>Fale comigo </strong></a>
+            <a class="cabecalho-menu-item" href="index.html"> Home </a>
+            <a class="cabecalho-menu-item" href="QuemSouEu.html"> Quem sou eu? </a>
+            <a class="cabecalho-menu-item" href="hobbies.html"> Hobbies </a>
+            <a class="cabecalho-menu-item" href="formulário.html">Fale comigo</a>
         </nav>
 
     </header>
     <main class="conteudo">
+        <!-- Aqui criei a visualização da inicial com uma foto de apresentação e a criação de uma div para que meu nome a frase que criei fique juntas -->
         <section class="conteudo-principal">
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-titulo">Julyana Klapousko</h1>
