--- a/QuemSouEu.html
+++ b/QuemSouEu.html
@@ -6,29 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem sou eu</title>
 
-    <link rel="stylesheet" type="text/css" href="style2.css">
+    <link rel="stylesheet" type="text/css" href="./CSS/quemsoueu.css">
 </head>
 
     <body>
         <header class="cabecalho">
+                    <!-- Criação do menu de navegação com o link de cada pagina nomeada como pede a atividade -->
             <nav class="cabecalho-menu">
-                <a class="cabecalho-menu-item" href="index.html"><strong> Home </strong></a>
-                <a class="cabecalho-menu-item" href="index2.html"><strong> Quem sou eu? </strong></a>
-                <a class="cabecalho-menu-item" href="index3.html"><strong> Hobbies </strong></a>
-                <a class="cabecalho-menu-item" href="formulário.html"><strong>Fale comigo </strong></a>
+                <a class="cabecalho-menu-item" href="index.html">Home </a>
+                <a class="cabecalho-menu-item" href="QuemSouEu.html"> Quem sou eu?</a>
+                <a class="cabecalho-menu-item" href="hobbies.html">Hobbies</a>
+                <a class="cabecalho-menu-item" href="formulário.html">Fale comigo </a>
             </nav>
         </header>
     <main class="conteudo">
         <section class="conteudo-principal">
+            <!-- aqui criei uma div para meu titulo e meu paragrafo ficarem juntos, e tambem pra fazer uma gracinha coloquei o link da musica 22 da Taylor, que é minha cantora favorita -->
             <div class="conteudo-principal-escrito">
                 <h1 class="conteudo-principal-titulo">Sobre mim</h1>
                 <p class="paragrafo">
-                    <strong>Olá! Tenho <a href="https://www.youtube.com/watch?v=AgFeZr5ptV8">22 anos</a> estou finalizando minha primeira graduação em Ciências Biológicas pela UFPR. Gosto de estudar psicologia, com foco em psicanálise, métodos de aprendizado e inteligência emocional. 
+                    Olá! Tenho <a href="https://www.youtube.com/watch?v=AgFeZr5ptV8">22 anos</a> estou finalizando minha primeira graduação em Ciências Biológicas pela UFPR. Gosto de estudar psicologia, com foco em psicanálise, métodos de aprendizado e inteligência emocional. 
                     Tenho 4 filhas caninas, Vera Lúcia, Choco, Ana Catarina e Mochila (respectivamente). Uma curiosidade é que a Ana e a Mochi apareceram no meu portão logo depois do meu aniversário, a Ana em 2021 e a Mochi em 2022, por isso eu costumo dizer que elas são meus presentinhos do universo.
-                    </strong>
+                    
                 </p>
             </div>
         </section>
+        <!-- crieu uma div com a foto das meninas pensando que elas fiquem juntas e facilite a estilização -->
         <section class="fotos-das-filhas">
             <div>
                 <img class="foto-meninas" src="./imagens/lupi.jpg" alt="foto vera lúcia">
